src/test/deca/codegen/valid/no-objects/multiple_assign_variables.deca
// Description:
//    Test d'un multiple assignement avec des variables.
//
// Resultats:
//    Ok
//
// Historique:
//    cree le 15/01/2022
{
    boolean a;
    boolean b;
    boolean c = true;
    a = b = c;
    println("Ok");
}