src/test/deca/codegen/invalid/no-objects/overflow_add.deca
// Description:
//    Test d'une addition de flottant jusqu'a overflow
//
// Resultats:
//    Erreur : débordement pendant opération arithmétique entre deux flottants.
//
// Historique:
//    cree le 15/01/2022
{
    float a = 1.0;
    while (true) {
        a = a + a;
    }
}
